--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,21 @@
+appdirs==1.4.3
+authy==2.1.3
+blinker==1.4
+click==6.7
 Flask==0.12
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.2
+heroku==0.1.4
+itsdangerous==0.24
+Jinja2==2.9.6
+MarkupSafe==1.0
+packaging==16.8
+pkg-resources==0.0.0
 psycopg2==2.7.1
+pyparsing==2.2.0
+python-dateutil==1.5
+requests==2.14.2
+simplejson==3.10.0
+six==1.10.0
 SQLAlchemy==1.1.7
+Werkzeug==0.12.1
